--- a/Project_v2/app/src/main/res/menu/homescreen_nav_bar_menu.xml
+++ b/Project_v2/app/src/main/res/menu/homescreen_nav_bar_menu.xml
@@ -31,7 +31,7 @@
 
     <item
         android:id="@+id/nav_browseEvents"
-        android:icon="@drawable/facility_icon"
+        android:icon="@drawable/browseevent_icon"
         android:title="Browse Events" />
 
 </menu>
