--- a/Project_v2/app/src/main/res/layout/entrant_list_object.xml
+++ b/Project_v2/app/src/main/res/layout/entrant_list_object.xml
@@ -36,7 +36,7 @@
         android:text="Notify"
         android:textAllCaps="false"
         android:textSize="16sp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +54,7 @@
         android:text="Cancel"
         android:textAllCaps="false"
         android:textSize="16sp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
