--- a/Project_v2/app/src/main/res/layout/event_landing_page_user.xml
+++ b/Project_v2/app/src/main/res/layout/event_landing_page_user.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -144,6 +143,7 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textSize="20sp"
+        android:visibility="visible"
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toTopOf="@+id/geolocation_warning_view"
         app:layout_constraintEnd_toEndOf="parent"
