remove images, qr code, events, browse images

--- a/Project_v2/app/src/main/res/menu/homescreen_nav_bar_menu.xml
+++ b/Project_v2/app/src/main/res/menu/homescreen_nav_bar_menu.xml
@@ -30,8 +30,8 @@
         android:title="Browse Images" />
 
     <item
-        android:id="@+id/nav_browseFacilities"
-        android:icon="@drawable/facility_icon"
-        android:title="Browse Facilities" />
+        android:id="@+id/nav_browseEvents"
+        android:icon="@drawable/eventstatus_icon"
+        android:title="Browse Events" />
 
 </menu>
