--- a/Project_v2/app/src/main/res/layout/admin_profile_list_object.xml
+++ b/Project_v2/app/src/main/res/layout/admin_profile_list_object.xml
@@ -8,19 +8,31 @@
     android:backgroundTint="@color/lucky_uiEmphasis"
     android:layout_marginVertical="8dp">
 
+    <ImageView
+        android:id="@+id/profile_image_view"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:src="@drawable/placeholder_profile_picture" />
+
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/profile_name_text_view"
         style="@style/GenericText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:drawablePadding="4dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:fontFamily="@font/airbnbcereal_w_bd"
-        android:text="@string/admin_profile_list_object_name"
-        android:textAlignment="viewEnd"
-        app:drawableLeftCompat="@drawable/entrant_icon"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Admin- "
+        android:textAlignment="viewStart"
+        app:layout_constraintStart_toEndOf="@+id/profile_image_view"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
