Browse Images Delete Event Delete QRhashdata Delete Image

--- a/Project_v2/app/src/main/res/menu/homescreen_nav_bar_menu.xml
+++ b/Project_v2/app/src/main/res/menu/homescreen_nav_bar_menu.xml
@@ -34,4 +34,9 @@
         android:icon="@drawable/facility_icon"
         android:title="Browse Facilities" />
 
+    <item
+        android:id="@+id/nav_browseEvents"
+        android:icon="@drawable/facility_icon"
+        android:title="Browse Events" />
+
 </menu>
