Added profile image delete button and also doesn't break the app if there is no image in the database to delete ad fallbacks to generated image for the users

--- a/Project_v2/app/src/main/res/layout/profile.xml
+++ b/Project_v2/app/src/main/res/layout/profile.xml
@@ -73,7 +73,8 @@
             app:layout_constraintStart_toStartOf="@+id/profile_pic_view"
             app:layout_constraintTop_toTopOf="@+id/profile_pic_view"
             app:layout_constraintVertical_bias="1.0"
-            app:srcCompat="@drawable/profilepicedit_icon" />
+            app:srcCompat="@drawable/profilepicedit_icon"
+            />
 
         <TextView
             android:id="@+id/profile_name_text"
