--- a/Project_v2/app/src/main/res/layout/login.xml
+++ b/Project_v2/app/src/main/res/layout/login.xml
@@ -53,23 +53,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signup_text" />
 
+
+
+
     <TextView
         android:id="@+id/signup_button"
-        android:clickable="true"
-        android:focusable="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:textSize="14sp"
+        android:layout_marginTop="20dp"
+        android:clickable="true"
+        android:focusable="true"
         android:text="@string/Not_a_user"
         android:textAllCaps="false"
         android:textColor="@color/lucky_uiAccent"
-
-
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logging_you_in"
-        tools:ignore="HardcodedText" />
+        app:layout_constraintTop_toBottomOf="@+id/logging_you_in" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
