--- a/Project_v2/app/src/main/res/layout/event_landing_page_user.xml
+++ b/Project_v2/app/src/main/res/layout/event_landing_page_user.xml
@@ -143,7 +143,7 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textSize="20sp"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toTopOf="@+id/geolocation_warning_view"
         app:layout_constraintEnd_toEndOf="parent"
