--- a/Project_v2/app/src/main/res/layout/event_overlay.xml
+++ b/Project_v2/app/src/main/res/layout/event_overlay.xml
@@ -21,7 +21,7 @@
         style="@style/ActiveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="312dp"
+        android:layout_marginBottom="64dp"
         android:backgroundTint="@color/lucky_red_alert"
         android:fontFamily="@font/airbnbcereal_w_bd"
         android:padding="12dp"
@@ -29,16 +29,15 @@
         android:textAllCaps="false"
         android:visibility="visible"
         app:cornerRadius="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/delete_event_qrdata_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/delete_event_qrdata_button"
         style="@style/ActiveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
         android:backgroundTint="@color/lucky_red_alert"
         android:fontFamily="@font/airbnbcereal_w_bd"
         android:padding="12dp"
@@ -46,9 +45,10 @@
         android:textAllCaps="false"
         android:visibility="visible"
         app:cornerRadius="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/delete_event_button" />
+        app:layout_constraintTop_toBottomOf="@+id/notification_top_bar" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
