--- a/Project_v2/app/src/main/res/layout/admin_profile_list_object.xml
+++ b/Project_v2/app/src/main/res/layout/admin_profile_list_object.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/rounded_overlay"
@@ -9,7 +8,7 @@
     android:layout_marginVertical="8dp">
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/admin_profile_name"
         style="@style/GenericText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
