added refresh button on EventLandingPageOrganizerActivity, if deadline passed, user cannot join an event, and notification is not sent to the owner of the event if their event was deleted and if QR is deleted

--- a/Project_v2/app/src/main/res/layout/event_landing_page_organizer.xml
+++ b/Project_v2/app/src/main/res/layout/event_landing_page_organizer.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="24dp"
-    android:clipToPadding="false"
-    android:background="@color/lucky_background">
+    android:id="@+id/swipe_refresh_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="24dp"
+        android:clipToPadding="false"
+        android:background="@color/lucky_background">
+
 
     <ImageView
         android:id="@+id/event_picture_organiser"
@@ -233,4 +239,5 @@
         app:layout_constraintTop_toBottomOf="@+id/event_countdown_view_organiser"
         app:srcCompat="@drawable/edit_picture" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
