--- a/Project_v2/app/src/main/res/values/ids.xml
+++ b/Project_v2/app/src/main/res/values/ids.xml
@@ -4,4 +4,5 @@
     <item name="available_event_description_text" type="id" />
     <item name="available_event_date_text" type="id" />
     <item name="available_event_price_text" type="id" />
+    <item name="create_event_options_root" type="id" />
 </resources>
