--- a/Project_v2/app/src/main/res/values/styles.xml
+++ b/Project_v2/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <style name="GenericText">
         <item name="android:fontFamily">@font/airbnbcereal_w_bk</item>
         <item name="android:textColor">@color/lucky_white</item>
@@ -16,8 +16,8 @@
 
     <style name="RoundedProfileName">
         <item name="android:background">@drawable/rounded_inactive_button_background</item>
-        <item name="android:paddingHorizontal">24dp</item>
-        <item name="android:paddingVertical">4dp</item>
+        <item name="android:paddingHorizontal" tools:targetApi="o">24dp</item>
+        <item name="android:paddingVertical" tools:targetApi="o">4dp</item>
         <item name="android:fontFamily">@font/airbnbcereal_w_bd</item>
         <item name="android:textColor">@color/lucky_grey</item>
         <item name="android:textColorHint">@color/lucky_grey</item>
