--- a/Project_v2/app/src/main/res/layout/browse_images_list_item.xml
+++ b/Project_v2/app/src/main/res/layout/browse_images_list_item.xml
@@ -8,13 +8,7 @@
         android:id="@+id/admin_image_list_object_view"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:contentDescription="@string/event_image"/>
 
-    <ImageButton
-        android:id="@+id/delete_image_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:background="?attr/selectableItemBackgroundBorderless" />
 </RelativeLayout>
