--- a/Project_v2/app/src/main/res/layout/create_event.xml
+++ b/Project_v2/app/src/main/res/layout/create_event.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/airbnbcereal_w_bk"
-            android:hint=""
+            android:hint="@string/event_name_text"
             android:inputType="text"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/airbnbcereal_w_bk"
-            android:hint=""
+            android:hint="@string/event_details_text"
             android:inputType="text"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -102,7 +102,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/airbnbcereal_w_bk"
-            android:hint=""
+            android:hint="@string/event_rules_text"
             android:inputType="text"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
