changed your facilities icon

--- a/Project_v2/app/src/main/res/menu/homescreen_nav_bar_menu.xml
+++ b/Project_v2/app/src/main/res/menu/homescreen_nav_bar_menu.xml
@@ -11,7 +11,7 @@
 
     <item
         android:id="@+id/nav_facilities"
-        android:icon="@drawable/facility_icon"
+        android:icon="@drawable/your_facilities"
         android:title="Your Facilities" />
 
     <item
