--- a/Project_v2/app/src/main/res/layout/create_event_options.xml
+++ b/Project_v2/app/src/main/res/layout/create_event_options.xml
@@ -16,12 +16,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/airbnbcereal_w_bk"
-        android:hint=""
         android:inputType="number"
         android:padding="8dp"
-        android:text="@string/create_event_entrants_num_text"
+        android:hint="@string/create_event_entrants_num_text"
         android:textAlignment="textStart"
         android:textColor="@color/lucky_white"
+        android:textColorHint="@android:color/darker_gray"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -104,6 +104,7 @@
         android:text="@string/create_event_deadline_text"
         android:textAlignment="textStart"
         android:textColor="@color/lucky_white"
+        android:textColorHint="@android:color/darker_gray"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -176,9 +177,9 @@
         android:hint="@string/create_event_attendees_num_text"
         android:inputType="number"
         android:padding="8dp"
-        android:text="@string/create_event_attendees_num_text"
         android:textAlignment="textStart"
         android:textColor="@color/lucky_white"
+        android:textColorHint="@android:color/darker_gray"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
