--- a/Project_v2/app/src/main/res/layout/facility_landing_page.xml
+++ b/Project_v2/app/src/main/res/layout/facility_landing_page.xml
@@ -61,7 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/airbnbcereal_w_bk"
-        android:text="@string/event_description_text"
+        android:text="@string/facility_details"
         android:textAlignment="textStart"
         android:textColor="@color/lucky_white"
         android:textSize="14sp"
