Fixed a a bug where event status tab wasn't being updated with the status text

--- a/Project_v2/app/src/main/res/layout/homescreen_event_satus_list_object.xml
+++ b/Project_v2/app/src/main/res/layout/homescreen_event_satus_list_object.xml
@@ -69,7 +69,7 @@
             android:fontFamily="@font/airbnbcereal_w_bd"
             android:paddingHorizontal="24dp"
             android:paddingVertical="8dp"
-            android:text="Confirmed"
+            android:text="Accepted"
             android:textColor="@color/lucky_white"
             android:textSize="16sp"
             android:visibility="invisible"
