--- a/Project_v2/app/src/main/res/layout/admin_event_list_item.xml
+++ b/Project_v2/app/src/main/res/layout/admin_event_list_item.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp">
+    android:background="@drawable/rounded_overlay"
+    android:backgroundTint="@color/lucky_uiEmphasis"
+    android:layout_marginVertical="8dp">
 
     <!-- Event Name -->
     <TextView
@@ -18,7 +20,8 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:drawableRightCompat="@drawable/yourevent_icon" />
 
     <!-- Event Date -->
     <TextView
@@ -33,19 +36,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/event_name" />
-
-    <!-- Event Price -->
-    <TextView
-        android:id="@+id/event_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/airbnbcereal_w_bd"
-        android:text="$10"
-        android:textColor="#FFFFFF"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/event_date" />
 
     <!-- Event Description -->
     <TextView
