--- a/Project_v2/app/src/main/res/layout/admin_image_list.xml
+++ b/Project_v2/app/src/main/res/layout/admin_image_list.xml
@@ -2,21 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lucky_background"
     android:padding="24dp">
 
-    <!-- SwipeRefreshLayout for pull-to-refresh -->
     <include
         android:id="@+id/top_bar"
         layout="@layout/top_bar_clear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
@@ -27,19 +23,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <!-- RecyclerView inside NestedScrollView -->
-        <androidx.core.widget.NestedScrollView
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="-32dp" />
-
-        </androidx.core.widget.NestedScrollView>
+            android:layout_height="match_parent"
+            android:layout_marginTop="16dp"/>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
